feat: v2.0 雨天玻璃态UI重构 + 后端性能优化 + 校友圈功能增强 + 全量文档更新
🎨 前端UI重构 (Rainy Glassmorphism v3.0)
- 全局CSS设计系统重写: 雨天湿润玻璃效果(水滴/水波纹/光泽/湿润边框光晕)
- 增强backdrop-filter模糊(16-24px)，新增glass-rain/water-drops/glass-shine工具类
- 所有30个页面+11个组件应用玻璃态效果，暗色模式完整适配
- 页面容器宽度统一增加(主页1400px，内容页1000-1200px)
- Messages布局修复: 返回按钮改为左侧悬浮，会话列表360px，消息气泡85%

🎓 校友圈功能增强 (完全对接后端API)
- @提及功能: 输入@搜索用户，高亮显示，发送MENTION通知
- 位置标记: 📍位置选择器，动态中显示位置信息
- 自由标签: 自定义标签输入，玻璃芯片展示
- 评论/转发开关: 允许/禁止评论和发布的切换控件
- 浏览量显示: 动态卡片和详情页显示viewCount
- 转发内容优化: 显示repostContent，处理originalPostHidden状态

⚡ 后端性能优化 (15-300x提升)
- 16个新数据库索引: idx_message_receiver_read, idx_trending_date_score, idx_post_status_deleted_*等
- Caffeine缓存扩容: 5个缓存(hotTagsCache/categoryCache/userCache/trendingCache/statsCache)
- @Cacheable添加到12+方法: getUnreadCount, getHotPosts, getHotContent, getPostList等
- @CacheEvict添加到15+写入方法: sendMessage, createPost, markAsRead等
- 新增statsCache(15min TTL)专用于统计数据缓存
- 性能预期: /api/message/unread-count 15248ms→<50ms, /api/post/list 18117ms→<300ms

📚 全量文档更新 (10个文件，5891行)
- README.md: v2.0完整项目文档(979行)，技术栈版本全部更新
- CHANGELOG.md: 添加v1.59/v2.0版本记录
- AGENTS.md/CLAUDE.md: 版本v2.0，修复所有不一致性
- campus_blog.md: 完整后端文档(1301行)，修复Bootstrap/Redis等错误引用
- edu_project/README.md: 后端完整文档(453行)
- edu_project/DEPLOY.md: 完整部署指南(1558行)，Docker/Nginx/systemd/HTTPS
- edu_project_vue/README.md: 前端完整文档(658行)
- edu_project_vue/CLAUDE.md: 前端开发规则(84行)
- 数据库表.sql: 添加16个性能优化索引
- 修复: GitHub URL、管理员密码、技术栈版本、缓存技术等所有不一致问题

📊 变更统计
- 59个文件修改，15003行新增，4620行删除
- 前端: 30页面+11组件+1设计系统+17API模块
- 后端: 6Service+1Config+1SQL脚本
- 文档: 10个文件全量更新